# ABB-Klipper-Middleware

./: .dockerignore  .gitignore  .readthedocs.yaml  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  docker.sh  install.sh  log4rs.yaml  test.mod
.github/workflows/: build_with_make.yml  conda.yml  pages.yml
docs/source/: conf.py  index.rst
src/: main.rs
src/bridge/: api.rs  auth.rs  bridge.rs  challenge_response.rs  client.rs  config.rs  dashboard.rs  main.rs
src/converter/: README.md  convert.rs  converter.py  pyproject.toml  setup.py  test.mod  utility.rs
src/converter/abb_klipper_middleware.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: __init__.py  dashboard.html  dashboard_web.py  server.py  test_converter.py
