[package]
name = "ABB-Klipper-Middleware"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "3.0.0"
reqwest = "0.12.12"
tokio = { version = "1", features = ["full"] }
url = "2"

[[bin]]
name = "converter"
path = "src/converter/convert.rs"

[[bin]]
name = "bridge"
path = "src/bridge/bridge.rs"
