[package]
name = "ABB-Klipper-Middleware"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.1"
reqwest = "0.12.12"
tokio = { version = "1", features = ["full"] }
url = "2"
rand= "*"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
log = "0.4"
env_logger = "0.11"
log4rs = { version = "1.2", features = ["gzip"] }


[[bin]]
name = "bridge"
path = "src/bridge/bridge.rs"
