[package]
name = "ABB-Klipper-Middleware"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4"
regex = "1.11.1"
reqwest = "0.12.12"
tokio = { version = "1", features = ["full"] }
url = "2"
rand= "*"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
log = "0.4"
env_logger = "0.11"
log4rs = { version = "1.2", features = ["gzip"] }
colored = "*"
chrono = "*"
crossterm = "*"
sysinfo = "*"
warp = "0.3"
serde_json = "1.0"

[[bin]]
name = "bridge"
path = "src/bridge/main.rs"

[[bin]]
name = "bridge_old"
path = "src/bridge/bridge.rs"
